[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-multipart = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
wasm-bindgen = "0.2"
web-sys = "0.3"
gloo-file = "0.1"
yew = "0.19"
actix-files = "0.6.6"
futures-util = "0.3.31"
sanitize-filename = "0.3"